tests/fixtures/valid/typed_refs/model.etcm
spec ModelConfig:
  depth: int = Field(default=12)

impl tiny:
  depth: 4

impl default:
  depth: 12
