tests/fixtures/invalid/constraint_malformed.etcm
spec Train:
  epochs: int = Field(gt="zero")

impl default:
  epochs: 1
